# pyQUESTPlus

./: README.md  VSCodePythonNotes.txt  pyproject.toml  test_qpNLogP.py
pyQUESTPlus.egg-info/: PKG-INFO  SOURCES.txt
src/pyQUESTPlus/: __init__.py  utilities.py
src/pyQUESTPlus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyQUESTPlus1/utilities/: __init__.py
src/pyQuestPlus/: __init__.py  version.py
src/pyQuestPlus/utilities/: qpLogLikelihood.py  test_qpLogLikelihood.py
tests/: test_qpLogLikelihood.py  test_utilities.py
utilities/: qpLogLikelihood.py  test_qpNLogP.py
utilities/tests/: test_qpNLogP.py
